# eventhub-to-timescale

./: .env.example  .env.vault  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  appmap.yml  codecov.yml  data.json  file_hashes_mac.txt  host.json  pyproject.toml  renovate.json  requirements.txt  setup.cfg  test-requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: azure-functions-app-python.yml  codeql.yml  coverage-comment.yml  coverage.yml  pysa.yml  run_tests.yml
EventHubTrigger1/: __init__.py  function.json  glow_to_timescale.py
bmw_to_timescale/: __init__.py  function.json
bmw_update/: __init__.py  function.json
db/: cleanup_table_and_roles.sql  create_table_and_roles.sql  filter_unchanged_rows.sql  format_time_intervals.sql  get_aggregated_data.sql  get_aggregated_data_by_day.sql  get_aggregated_data_by_interval.sql  get_most_frequent_value_by_time_interval.sql  get_sampled_data.sql  get_sampled_data_with_time_weight.sql  get_unique_measurement_subjects.sql
json-to-timeseries/: __init__.py  function.json
json_to_timeseries/: __init__.py  function.json
shared_code/: __init__.py  bmw.py  bmw_to_timescale.py  duplicate_check.py  emon.py  glow.py  helpers.py  homie.py  json.py  json_converter.py  timescale.py  timeseries.json  timeseries.py
shared_code/test/: test_bmw.py  test_bmw_to_timescale.py  test_duplicate_check.py  test_emon.py  test_glow.py  test_helpers.py  test_homie.py  test_json.py  test_json_converter.py  test_timescale.py  test_timeseries.py
test/: _test_json_to_timeseries.py.old  _test_shared_code.py  _test_shared_code.py.old  bmw_topic_messages.json  cleaned_bmw_api_state_data.json  get_test_data.py  test_bmw.py  test_bmw_to_timescale.py  test_check_function_signatures_match_bindings.py  test_data.json  test_data.py  test_duplicate_check.py  test_function_triggers.py  test_get_test_data.py  test_glow.py  test_json-to-timeseries.py  test_json_to_timeseries.py  test_shared_code.py  test_timescale.py
test_utils/: get_test_data.py  test_data.json
test_utils/test/: test_get_test_data.py
timeseries_to_timescale/: __init__.py  function.json
