[tool.poetry]
name = "eventhub-to-timescale"
version = "0.1.0"
description = ""
authors = ["rob al <mnbf9rca@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "eventhub_to_timescale"}]

[tool.poetry.dependencies]
python = "^3.9"
azure-functions = "^1.12.0"
python-dateutil = "^2.8.2"
psycopg = {extras = ["binary"], version = "^3.1.8"}
jsonschema = "^4.17.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
jsonpickle = "^3.0.1"
python-dotenv = "^0.21.1"



[tool.poetry.group.test.dependencies]
pytest-black = "^0.3.12"
flake8 = "^6.0.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
coverage = "^7.0.5"
pytest-mock = "^3.10.0"
mock = "^5.0.1"
jsonschema = "^4.17.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
